# c2pa-rs-html

./: Cargo.toml
cli/src/: main.rs
sdk/src/: jumbf_io.rs  lib.rs  manifest_store.rs
sdk/src/asset_handlers/: html_io.rs  mod.rs
sdk/src/utils/: mime.rs
wasm_html_verifier/: Cargo.toml
wasm_html_verifier/pkg/: wasm_html_verifier.d.ts  wasm_html_verifier.js  wasm_html_verifier_bg.wasm.d.ts
wasm_html_verifier/src/: lib.rs
