[package]
name = "wasm_html_verifier"
edition = "2024"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
c2pa = { path = "../sdk", default-features = false, features = ["rust_native_crypto", "v1_api"] }
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.wasm-pack]
wasm-opt = false

# base64 decoding
base64 = "0.21"

# regex for parsing HTML
regex = "1"

# log from WASM to browser console
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"

[features]
default = []
html = []